--- a/UrbanDictionary/UrbanDictionary/Base.lproj/Main.storyboard
+++ b/UrbanDictionary/UrbanDictionary/Base.lproj/Main.storyboard
@@ -1,24 +1,115 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17154" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="9lA-dc-449">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17124"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--Table View Controller-->
+        <scene sceneID="J2X-Ce-d2S">
+            <objects>
+                <tableViewController id="9lA-dc-449" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="DFY-07-S96">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="WordItemTableViewCell" rowHeight="90" id="etf-FW-rKV" customClass="WordItemTableViewCell" customModule="UrbanDictionary" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="414" height="90"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="etf-FW-rKV" id="CRa-0m-dRZ">
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="90"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Here goes the description" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Cr4-bl-hnk">
+                                            <rect key="frame" x="133" y="21" width="261" height="68"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="hand.thumbsup.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="a5B-ah-mBC">
+                                            <rect key="frame" x="16" y="34.5" width="21" height="20"/>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="999" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ye0-iy-qUJ" userLabel="thumbsUp">
+                                            <rect key="frame" x="11" y="57" width="31.5" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="999" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="F6c-US-EVN" userLabel="thumbsDown">
+                                            <rect key="frame" x="51" y="58" width="31.5" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="hand.thumbsdown.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="zSs-ci-4TM">
+                                            <rect key="frame" x="51" y="35.5" width="21" height="20"/>
+                                        </imageView>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="a5B-ah-mBC" firstAttribute="leading" secondItem="CRa-0m-dRZ" secondAttribute="leading" constant="10" id="0FU-Qh-jia"/>
+                                        <constraint firstItem="Cr4-bl-hnk" firstAttribute="trailing" secondItem="CRa-0m-dRZ" secondAttribute="trailingMargin" constant="10" id="0W8-zf-tXS"/>
+                                        <constraint firstItem="Cr4-bl-hnk" firstAttribute="top" secondItem="CRa-0m-dRZ" secondAttribute="topMargin" constant="10" id="6MA-bR-dVr"/>
+                                        <constraint firstItem="a5B-ah-mBC" firstAttribute="top" secondItem="CRa-0m-dRZ" secondAttribute="top" constant="10" id="8dq-E3-pfr"/>
+                                        <constraint firstItem="F6c-US-EVN" firstAttribute="top" secondItem="CRa-0m-dRZ" secondAttribute="topMargin" constant="10" id="Bah-pj-wha"/>
+                                        <constraint firstItem="zSs-ci-4TM" firstAttribute="leading" secondItem="ye0-iy-qUJ" secondAttribute="trailing" constant="10" id="JW2-cS-nFp"/>
+                                        <constraint firstItem="Cr4-bl-hnk" firstAttribute="bottom" secondItem="CRa-0m-dRZ" secondAttribute="bottomMargin" constant="10" id="OKV-Lz-hNU"/>
+                                        <constraint firstItem="F6c-US-EVN" firstAttribute="leading" secondItem="CRa-0m-dRZ" secondAttribute="leadingMargin" constant="10" id="UqX-bP-CTj"/>
+                                        <constraint firstItem="ye0-iy-qUJ" firstAttribute="leading" secondItem="CRa-0m-dRZ" secondAttribute="leading" constant="10" id="fj1-Vt-5eO"/>
+                                        <constraint firstItem="zSs-ci-4TM" firstAttribute="top" secondItem="CRa-0m-dRZ" secondAttribute="top" constant="10" id="nB8-q0-cG2"/>
+                                        <constraint firstItem="ye0-iy-qUJ" firstAttribute="top" secondItem="a5B-ah-mBC" secondAttribute="bottom" constant="5" id="puH-dP-OUM"/>
+                                        <constraint firstItem="Cr4-bl-hnk" firstAttribute="leading" secondItem="F6c-US-EVN" secondAttribute="trailing" constant="10" id="wgd-eZ-DMD"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="descriptionOutlet" destination="Cr4-bl-hnk" id="gLs-lh-gbe"/>
+                                    <outlet property="thumbsDown" destination="F6c-US-EVN" id="lt9-Ae-q4E"/>
+                                    <outlet property="thumbsUp" destination="ye0-iy-qUJ" id="634-xI-HNk"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="9lA-dc-449" id="Pv5-Do-MK4"/>
+                            <outlet property="delegate" destination="9lA-dc-449" id="87Q-Ab-SfC"/>
+                        </connections>
+                    </tableView>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="apO-aJ-oRA" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-30.434782608695656" y="-644.19642857142856"/>
+        </scene>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="UrbanDictionary" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="bnm-iq-oTg">
+                                <rect key="frame" x="76" y="221" width="97" height="34"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="726" y="-644"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="hand.thumbsdown.fill" catalog="system" width="128" height="121"/>
+        <image name="hand.thumbsup.fill" catalog="system" width="128" height="121"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
