--- a/UrbanDictionary/UrbanDictionary/Base.lproj/Main.storyboard
+++ b/UrbanDictionary/UrbanDictionary/Base.lproj/Main.storyboard
@@ -8,10 +8,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Table View Controller-->
+        <!--Word Table View Controller-->
         <scene sceneID="J2X-Ce-d2S">
             <objects>
-                <tableViewController id="9lA-dc-449" sceneMemberID="viewController">
+                <tableViewController id="9lA-dc-449" customClass="WordTableViewController" customModule="UrbanDictionary" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="DFY-07-S96">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
